bluejay-parser/tests/snapshots/schema_definition_integration_test__error@duplicate_directive_definitions.graphql.snap
---
source: bluejay-parser/tests/schema_definition_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/schema_definition/error/duplicate_directive_definitions.graphql
---
Error: Multiple directive definitions with name `@foo`
   ╭─[<unknown>:1:1]
   │
 1 │ directive @foo on OBJECT
   │           ──┬─  
   │             ╰─── Directive definition with name `@foo`
   │ 
 3 │ directive @foo on OBJECT
   │           ──┬─  
   │             ╰─── Directive definition with name `@foo`
───╯
